# docs/protocol/local-control-v1.openapi.json
@@ -3158,13 +3158,16 @@
       },
       "BrowserBallsWizardChatRequest": {
         "required": [
-          "localRole",
+          "circleId",
           "messages"
         ],
         "type": "object",
         "properties": {
-          "localRole": {
-            "type": "string"
+          "circleId": {
+            "type": [
+              "null",
+              "string"
+            ]
           },
           "messages": {
             "type": "array",
